--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
     "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-eslint-plugin": "^4.0.1",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "prettier": "2.8.3"
   },
   "engines": {
     "node": "12.x || 14.x || >= 16"
