refactor: splut up integration test cases in separate files

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "lint": "eslint .",
     "test:unit": "jest \"^.*(lib).*.spec.js\"",
-    "test:integration": "jest \"^.*(tests).*/integration.spec.js\""
+    "test:integration": "jest \"^.*(tests).*/integration.*\""
   },
   "dependencies": {
     "requireindex": "^1.2.0"
