feat: add support for arrow functions

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "lint": "eslint .",
     "test:unit": "jest \"^.*(lib).*.spec.js\"",
-    "test:integration": "jest \"^.*(tests).*/integration.*\""
+    "test:integration": "jest \"^.*(tests).*/integration.*\"",
+    "format": "prettier -w ."
   },
   "dependencies": {
     "requireindex": "^1.2.0"
